# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-25 10:13:28 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-37

    Summary:
      uri, fix documentation string for "Path.get_pathto"
    Revision:
      itools--main--0.11--patch-37


    modified files:
     Changelog uri/generic.py


2005-10-25 09:46:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-36

    Summary:
      uri, merge unit test for paths from herve
    Revision:
      itools--main--0.11--patch-36

    Patches applied:
    
     * herve@oursours.net--public/itools--uripath--0.11--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.11--patch-27
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-1
       unit tests of what to check before starting.
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-2
       let the code breath. :-)
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-3
       leave comment for future generations.
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-4
       fix variable name inversion.
    
     * herve@oursours.net--public/itools--uripath--0.11--patch-5
       enhance tests name and docstring.
    

    new files:
     uri/.arch-ids/test_path.py.id uri/test_path.py

    modified files:
     Changelog uri/generic.py

    new patches:
     herve@oursours.net--public/itools--uripath--0.11--base-0
     herve@oursours.net--public/itools--uripath--0.11--patch-1
     herve@oursours.net--public/itools--uripath--0.11--patch-2
     herve@oursours.net--public/itools--uripath--0.11--patch-3
     herve@oursours.net--public/itools--uripath--0.11--patch-4
     herve@oursours.net--public/itools--uripath--0.11--patch-5


2005-10-24 18:58:40 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-35

    Summary:
      web, revert "context.redirect" to use "resolve"
    Revision:
      itools--main--0.11--patch-35

